# quaynor

./: .gitignore  AGENTS.md  DEVELOPER-GUIDE.md  LICENSE  Package.swift  README.md  dev_guide.md  flake.nix
.github/workflows/: build.yml  main.yml  python_ci.yml  react_native_ci.yml  rust-install-test.yml
docs/: README.md  conftest.py  hooks.py  mkdocs.yml  pyproject.toml  requirements.txt  vercel.json
docs/markdown/: index.md  llm-basics.md  llm.txt  model-selection.md
docs/markdown/css/: extra.css
docs/markdown/flutter/: chat.md  embeddings-and-rag.md  index.md  sampling.md  tool-calling.md  vision.md
docs/markdown/img/: site.webmanifest
docs/markdown/js/: vercel-analytics.js
docs/markdown/python/: chat.md  embeddings-and-rag.md  index.md  logging-and-troubleshooting.md  sampling.md  streaming-and-async-api.md  tool-calling.md  vision.md
docs/markdown/react-native/: chat.md  embeddings-and-rag.md  index.md  sampling.md  tool-calling.md  vision.md
docs/markdown/swift/: chat.md  embeddings-and-rag.md  index.md  sampling.md  tool-calling.md  vision.md
docs/overrides/templates/: dark.html  footer.html
quaynor/: .gitignore  Cargo.nix  Cargo.toml  PYPI_DESCRIPTION.md  android.nix  models.nix  workspace.nix
quaynor/cli/: Cargo.toml
quaynor/cli/src/: lib.rs
quaynor/core/: Cargo.toml
quaynor/core/src/: chat.rs  errors.rs  lib.rs  llm.rs  tokenizer.rs
quaynor/flutter/: README.md
quaynor/flutter/quaynor/: LICENSE  README.md  default.nix  pubspec.yaml
quaynor/flutter/rust/: Cargo.toml  build.rs
quaynor/flutter/scripts/: build_ios.sh  build_macos.sh
quaynor/grammar/gbnf/: Cargo.toml
quaynor/grammar/gbnf-macro/: Cargo.toml
quaynor/python/: Cargo.toml  PYPI_DESCRIPTION.md  README.md  RELEASING.md  default.nix  pyproject.toml  quaynor.pyi
quaynor/python/examples/: chat_repl.py  crossencoder_demo.py  encoder_demo.py  small_model_demo.py
quaynor/python/src/: lib.rs
quaynor/python/tests/: test_model_downloading.py  test_multimodal.py  test_quaynor.py  test_reliability.sh  test_tool_calling.py
quaynor/react-native/: DEVELOPMENT.md  Quaynor.podspec  README.md  package-lock.json  package.json
quaynor/react-native/__tests__/: message.test.ts  prompt.test.ts  streaming.test.ts
quaynor/swift/: Package.swift  README.md  RELEASING.md
quaynor/uniffi/: Cargo.toml  WRAPPERSTRATEGY.md  uniffi.toml
quaynor/uniffi/src/: lib.rs
(+59 files in other folders)
