[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "quaynor"
version = "1.1.0"
description = "Local GGUF inference, tool calling, and streaming chat for Python (Quaynor bindings)."
readme = "PYPI_DESCRIPTION.md"
requires-python = ">=3.10"
authors = [{ name = "Quaynor" }]
urls = {Homepage = "https://www.quaynor.site/", Documentation = "https://www.quaynor.site/", Repository = "https://github.com/iBz-04/quaynor"}
license = { text = "MIT" }
keywords = ["AI", "LLM", "Large Language Models", "Inference", "Tool calling", "Local LLM", "Local Inference", 
"On-device AI", "SLM", "Edge AI","Realtime LLM", "Sustainable AI", "Inference engine", "Inference library", "Local AI"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
module-name = "quaynor"
# `LICENSE` is a symlink to the repo root so maturin can bundle it without `..` paths in the manifest.

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-markdown-docs>=0.9.0",
    "pytest-stub>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "../../docs"]
python_files = ["test_*.py", "*.md"]
pythonpath = ["."]
# Don't capture stdout/stderr so IO (prints, logs, progress bars) shows in real time
# confcutdir via addopts (not valid in ini_options) - limits conftest discovery to repo root
addopts = "-s --confcutdir=../.."
# Allow conftest.py discovery up to the repository root
confcutdir = "../.."
markers = [
    "network: marks tests that require network access (deselect with '-m \"not network\"')",
]
